no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -927,9 +927,9 @@ for ( [EXPR1] ; [TEST] ; [EXPR2] ) { ... }      #Same as:
 while ( TEST ) { ... }
 do { ... } while ( TEST )
 
-for ( QUAL VAR in OBJ ) { ... }                 #Iterate over own+shared enumerable keys.
+for ( [QUAL] VAR in OBJ ) { ... }               #Iterate over own+shared enumerable keys.
                                                 #OBJ can be ITERATOR.
-for ( QUAL VAR of ITERABLE ) {...}            -|#Iterates with VAR = NEXT
+for ( [QUAL] VAR of ITERABLE ) {...}          -|#Iterates with VAR = NEXT
 
 break [LABEL]                                   #Stop current for|while|switch iteration or (only with LABEL)
                                                 #if_else|anonymous block
