--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -47,8 +47,6 @@ any                               #NODE:
                                   #  - all redefine type STR, except if abstract types themselves
 
 EXPR                              #EXPR
-                                b##  - raw STR
-
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -70,6 +68,11 @@ TOKEN                            -#Child of CHILD_REFERENCE, for CST node also p
                                  -#  - [value STR]: raw source
 NON_TOKEN                        -#CST node not present in AST:
                                  -#  - element|value: like TOKEN
+
+RAW VALUE ==>                   b##On EXPR:
+                                b##  - raw STR
+                                B##On *_LITERAL (except BOOL|null):
+                                B##  - extra.raw STR
 
 
                                              /=+===============================+=\
@@ -145,7 +148,7 @@ QUAL VAR = VAL, ...               #Child of DECLARATION, type 'VariableDeclarati
                                   #     - [init EXPR]
                                   #  - kind 'var|let|const'
 
-lvalues                           #PATTERN. Parent of IDENTIFIER, MEMBER_EXPR, OBJ_PATTERN, ARR_PATTERN, REST_ELEMENT,
+PATTERN                           #Parent of IDENTIFIER, MEMBER_EXPR, OBJ_PATTERN, ARR_PATTERN, REST_ELEMENT,
                                   #ASSIGNMENT_PATTERN, TS_PARAMETER_PROPERTY
 
 VAR                               #Child of EXPR+PATTERN, type 'Identifier':
@@ -221,8 +224,12 @@ new FUNC(...)                     #Child of EXPR, type 'NewExpression':
                                   #  - callee EXPR (FUNC)
                                   #  - arguments EXPR|SPREAD_ELEMENT_ARR
 
-@DECORATOR                        #Type 'Decorator':
-                                  #  - expression EXPR
+@DECORATOR                     sae#On CLASS|METHOD_DEFINITION or
+                            seatbm#PROPERTY or
+                              sae##FIELD_DEFINITION:
+                               sae#  - decorators DECORATOR_ARR
+                               sae#Type 'Decorator':
+                               sae#  - expression EXPR
 
 
                                              /=+===============================+=\
@@ -239,9 +246,10 @@ if (...) {...} [else {...}]       #Child of STATEMENT, type 'IfStatement':
 
 switch (...) {...}                #Child of STATEMENT, type 'SwitchStatement':
                                   #  - discriminant EXPR
-                                  #  - cases SWITCH_CASE_ARR (type 'SwitchCase'):
-                                  #     - [test EXPR] (case's VAL) (null if default case)
-                                  #     - consequent STATEMENT_ARR (if two following cases, the first one has no consequent)
+                                  #  - cases SWITCH_CASE_ARR
+case VAL: ...                     #Type 'SwitchCase':
+default: ...                      #  - [test EXPR] (case's VAL) (null if default case)
+                                  #  - consequent STATEMENT_ARR (if two following cases, the first one has no consequent)
 
 while (...) {...}                 #Child of STATEMENT, type 'WhileStatement':
                                   #  - test EXPR
@@ -257,13 +265,13 @@ for (...;...;...) {...}           #Child of STATEMENT, type 'ForStatement':
                                   #  - [update EXPR]
                                   #  - body STATEMENT
 
-for (VAR in VAL) {...}            #Child of STATEMENT, type 'ForInStatement':
+for ([QUAL] VAR in VAL) {...}     #Child of STATEMENT, type 'ForInStatement':
                                   #  - left VARIABLE_DECLARATION|PATTERN
                                   #  - right EXPR
                                   #  - body STATEMENT
 
-for [await] (VAR of VAL) {...}    #Child of STATEMENT, type 'ForOfStatement':
-                                  #  - left VARIABLE_DECLARATION|PATTERN
+for [await] ([QUAL] VAR of VAL)   #Child of STATEMENT, type 'ForOfStatement':
+ {...}                            #  - left VARIABLE_DECLARATION|PATTERN
                                   #  - right EXPR
                                   #  - body STATEMENT
                                   #  - await BOOL
@@ -292,7 +300,8 @@ LABEL: ...                        #Child of STATEMENT, type 'LabeledStatement':
 try { ... }                       #Child of STATEMENT, type 'TryStatement':
 [catch (...) {...}]               #  - block BLOCK_STATEMENT
 [finally {...}]                   #  - [handler CATCH_CLAUSE] (type 'CatchClause'):
-                                  #     - param [PATTERN]
+                                 s#     - param [PATTERN]
+                                 S#     - param PATTERN
                                   #     - body BLOCK_STATEMENT
                                   #  - [finalizer BLOCK_STATEMENT]
 throw VAL                         #Child of STATEMENT, type 'ThrowStatement':
@@ -308,15 +317,22 @@ debugger                          #Child of STATEMENT, type 'DebuggerStatement'
                                              \=+===============================+=/
 
 
-STR|BOOL|NUM|BIGINT|null|REGEXP   #Child of EXPR, type 'Literal':
-                                  #  - value STR|BOOL|NUM|null|REGEXP
-                                 -#    or BIGINT
-                                  #  (REGEXP only)
-                                  #  - regex:
-                                  #     - pattern STR
-                                  #     - flags STR
-                                 -#  (BIGINT only)
-                                 -#  - bigint STR (without 'n')
+STR|BOOL|NUM|BIGINT|null|REGEXP  b#Child of EXPR, type 'Literal':
+                                 b#  - value STR|BOOL|NUM|null|REGEXP
+                              -seb#    or BIGINT
+                                 b#  (REGEXP only)
+                                 b#  - regex:
+                                 b#     - pattern STR
+                                 b#     - flags STR
+                              -seb#  (BIGINT only)
+                              -seb#  - bigint STR (without 'n')
+                                B##Type 'String|Boolean|Numeric|Null|RegExpLiteral':
+                                B##  - value STR|BOOL|NUM|null|REGEXP|BIGINT
+                                B##  (not BOOL|null)
+                                B##  - extra.rawValue STR|BOOL|NUM|null|REGEXP: like value
+                                B##  (REGEXP only)
+                                B##  - pattern STR
+                                B##  - flags STR
 undefined                         #Considered a VAR
 
 TAG`...`                          #Child of EXPR, type 'TaggedTemplateExpression':
@@ -326,21 +342,26 @@ TAG`...`                          #Child of EXPR, type 'TaggedTemplateExpression
                                   #  - quasis TEMPLATE_ELEMENT_ARR (non-${} parts), type 'TemplateElement':
                                   #     - tail BOOL (if last one, including empty "" if ends with ${})
                                   #     - value:
-                                  #        - [cooked STR] (null if contain escape sequences)
+                                  #        - [cooked STR]
+                            seatbm#          (null if contain invalid escape sequences)
                                   #        - raw STR
                                   #  - expressions EXPR_ARR (${} parts)
 
 {VAR[: VAL], ...}                 #Child of EXPR, type 'ObjectExpression':
-{[VAL]: VAL}                      #  - properties ARR of either:
-{...OBJ}                          #      PROPERTY (type 'Property')
-{                                 #        - key EXPR (LITERAL if {[VAR]: VAL} or {NUM: VAL})
-  [@DECORATOR]                    #        - value EXPR
-  FUNC(...){...}                  #        - kind 'init|get|set' (get|set are for getters|setters)
-}                                 #        - method BOOL (if FUNC)
-                                  #        - shorthand BOOL (if { VAR })
-                                  #        - computed BOOL
-                                  #        - decorators DECORATOR_ARR
-                                  #      SPREAD_ELEMENT (...OBJ)
+{[VAL]: VAL}                      #  - properties PROPERTY|SPREAD_ELEMENT_ARR
+{...OBJ}                         b#Type 'Property':
+{FUNC(...){...}}                 b#  - key EXPR (LITERAL if {[VAR]: VAL} or {NUM: VAL})
+                                 b#  - value EXPR
+                                 b#  - kind 'init|get|set' (get|set are for getters|setters)
+                                 b#  - method BOOL (if FUNC)
+                                 b#  - shorthand BOOL (if { VAR })
+                                 b#  - computed BOOL
+                                B##Type 'ObjectProperty' like PROPERTY but only for non-FUNCs and:
+                                B##  - extra.shorthand: like shorthand
+                                B##Type 'ObjectMethod' like PROPERTY but only for FUNCs and:
+                                B##  - child of FUNCTION_DECLARATION
+                                B##  - no value|shorthand
+                                B##  - kind 'init' -> 'method'
 
 [VAL...]                          #Child of EXPR, type 'ArrayExpression':
                                   #  - elements EXPR2|SPREAD_ELEMENT_ARR (null for sparse ARR elements)
@@ -358,14 +379,14 @@ TAG`...`                          #Child of EXPR, type 'TaggedTemplateExpression
 !VAL
 ~VAL                              #Child of EXPR, type 'UnaryExpression':
 typeof VAL                        #  - operator '-|+|!|~|typeof|void|delete'
-void VAL                          #  - prefix BOOL (whether before VAL, i.e. always true)
+void VAL                          #  - prefix BOOL (always true)
 delete VAL                        #  - argument EXPR
 
 ++VAR                             #Child of EXPR, type 'UpdateExpression':
 VAR++                             #  - operator '--|++'
 --VAR                             #  - prefix BOOL
 VAR--                             #  - argument EXPR
-                                 -#    or PATTERN
+                               -ST#    or PATTERN
 
 VAL == != === !== < <= > >= <<    #Child of EXPR, type 'BinaryExpression':
 >> >>> + - * / % ** | ^ & in      #  - operator '==|!=|===|!==|<|<=|>|>=|<<|>>|>>>|+|-|*|/|%|**|||^|&|in|instanceof'
@@ -398,27 +419,32 @@ VAL,...                           #Child of EXPR, type 'SequenceExpression':
                                              \=+===============================+=/
 
 
-[@DECORATOR]                      #Type 'Class':
-class [CLASS] [extends PARENT] {  #  - [id IDENTIFIER]
-  [@DECORATOR]                    #  - [superClass EXPR]
-  [static] FUNC(...) {...}        #  - body CLASS_BODY, type 'ClassBody':
-}                                 #     - body METHOD_DEFINITION|FIELD_DEFINITION_ARR
-                                  #  - decorators DECORATOR_ARR
-                                  #Type 'MethodDefinition':
-                                  #  - key EXPR|PRIVATE_NAME
-                                  #  - value FUNCTION_EXPR
-                                  #  - kind 'constructor|method|get|set'
-                                  #  - static BOOL
-                                  #  - computed BOOL
-                                  #  - decorators DECORATOR_ARR
-  [static] VAR [= VAL]           -#Type 'FieldDefinition':
-                                 -#  - key EXPR|PRIVATE_NAME
-                                 -#  - [value EXPR]
-                                 -#  - static BOOL
-                                 -#  - computed BOOL
+class [CLASS] [extends PARENT] {  #Type 'Class':
+  [static] FUNC(...) {...}        #  - [id IDENTIFIER]
+}                                 #  - [superClass EXPR]
+                                  #  - body CLASS_BODY
+                                  #Type 'ClassBody':
+                                bt#  - body METHOD_DEFINITION|FIELD_DEFINITION_ARR
+                                T##  - body METHOD_DEFINITION|CLASS_PROPERTY_ARR
+                                B##  - body CLASS_METHOD|CLASS_PROPERTY_ARR
+                                 b#Type 'MethodDefinition':
+                                 b#  - key EXPR|PRIVATE_NAME
+                                 b#  - value FUNCTION_EXPR
+                                 b#  - kind 'constructor|method|get|set'
+                                 b#  - static BOOL
+                                 b#  - computed BOOL
+                                B##Type 'ClassMethod' like METHOD_DEFINITION but:
+                                B##  - child of FUNCTION_DECLARATION
+                                B##  - no value
+  [static] VAR [= VAL]       -setb#Type 'FieldDefinition'
+                               TB##or 'ClassProperty':
+                               -se#  - key EXPR|PRIVATE_NAME
+                               -se#  - [value EXPR]
+                               -se#  - static BOOL
+                               -se#  - computed BOOL
   #VAR|#FUNC()                -set#Type 'PrivateName':
                              -bset#  - name STR
-                                B##  - identifier IDENTIFIER
+                                B##  - id IDENTIFIER
 class CLASS ... {}                #Child of CLASS+DECLARATION, type 'ClassDeclaration'
 class [CLASS] ... {}              #Child of CLASS+EXPR, type 'ClassExpression'
 
