no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -121,18 +121,18 @@ EXPR_STATEMENT                    #Child of STATEMENT, type 'ExpressionStatement
 {...}                             #Child of STATEMENT, type 'BlockStatement':
                                   #  - body STATEMENT_ARR
 
-// COMMENT                   ambl##On PROGRAM:
-/* COMMENT */                ambl##  - comments COMMENT_ARR
-                             ambl##COMMENT:
-                             ambl##  - type 'Line|Block'
-                             ambl##  - value STR
+// COMMENT                  (set)##On PROGRAM:
+/* COMMENT */               (set)##  - comments COMMENT_ARR
                              (bl)##On FILE:
                              (bl)##  - comments COMMENT_ARR
                              (bl)##On NODE:
                              (bl)##  - [leadingComment|trailingComments|innerComments COMMENT_ARR]
-                             (bl)##COMMENT:
+                             (am)##As an onComment() option
+                                 ##COMMENT:
+                              (m)##  - type 'SingleLine|MultiLine'
+                           (aset)##  - type 'Line|Block'
                              (bl)##  - type 'CommentLine|Block'
-                             (bl)##  - value STR
+                                 ##  - value STR
 
 
                                              /=+===============================+=\
