no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -661,8 +661,8 @@ Object.keys(OBJ)                                #Returns own keys, excluding non
 Object.values(OBJ)                            -|#Same as Object.keys() but for values
 Object.entries(OBJ)                           -|#Same as Object.keys() but for [KEY, VALUE]
 
-Object.fromEntries(ITERABLE)              12*-|~#Inverse Object.entries(), i.e. from ITERABLE of [KEY, VALUE] to OBJ
-                                          12*-|~#As opposed to Object.entries(), KEY that SYM are not skipped
+Object.fromEntries(ITERABLE)               12*-|#Inverse Object.entries(), i.e. from ITERABLE of [KEY, VALUE] to OBJ
+                                           12*-|#As opposed to Object.entries(), KEY that SYM are not skipped
 
 Object.getOwnPropertyNames(OBJ)                 #Returns own keys, including non-enumerable
 OBJ.propertyIsEnumerable('VAR')                 #Returns true if OBJ['VAR'] is in Object.keys()
@@ -1092,7 +1092,7 @@ OBJ[Symbol.search](...)                       -|#Methods to implement to be able
 STR.toUpper|LowerCase()                         #
 STR.trim()                                      #
 STR.trimLeft|Right()                            #Remove whitespaces on left and|or right.
-STR.trimStart|End()                        10*|~#Aliases for trimLeft|Right()
+STR.trimStart|End()                         10*|#Aliases for trimLeft|Right()
 STR.padStart|End(NUM[, STR2])                 -|#If STR.length < NUM, prepends|appends STR2 (def: ' ') until STR.length === NUM
 
 STR.concat(STR2...)                             #Prefer + and +=
@@ -1474,8 +1474,8 @@ ARR.reduce[Right]                               #MEMO is:
                                                 #reduceRight iterates from end to beginning
 ARR.filter(FUNC(VAL, KEY, ARR)->BOOL[, THIS])   #Excludes if false
 ARR.every|some(FUNC(VAL, KEY, ARR)->BOOL[,THIS])#Returns true if all|any true.
-ARR.flat([INT])                           11*-|~#Flattens INT levels of depth (def: 1)
-ARR.flatMap(...)                          11*-|~#Same as ARR.map(...).flatten(1)
+ARR.flat([INT])                            11*-|#Flattens INT levels of depth (def: 1)
+ARR.flatMap(...)                           11*-|#Same as ARR.map(...).flatten(1)
 
 ARR.keys()                                    -|#Returns all INDEX as ITERABLETOR
 ARR.values()                               10*-|#Returns all VAL as ITERABLETOR (i.e. same as ARR[Symbol.iterator])
@@ -1829,11 +1829,11 @@ Promise.all(VAL|PROMISABLE_ITERABLE)          -|#Returns PROMISE:
                                               -|#VAL is converted to PROMISE2 using Promise.resolve(VAL)
 Promise.race(VAL|PROMISABLE_ITERABLE)         -|#Same but instead:
                                               -|#  - if any PROMISABLE resolved|rejected with VAL2 -> resolved|rejected with VAL2
-Promise.allSettled(VAL|PROMISABLE_ITERABLE) *-|~#Same but instead:
-                                            *-|~#  - after all PROMISABLE resolved|rejected with VAL2 -> resolved with OBJ_ARR:
-                                            *-|~#     - status 'resolved|rejected'
-                                            *-|~#     - value VAL2 (if resolved)
-                                            *-|~#     - reason VAL2 (if rejected)
+Promise.allSettled(VAL|PROMISABLE_ITERABLE)  *-|#Same but instead:
+                                             *-|#  - after all PROMISABLE resolved|rejected with VAL2 -> resolved with OBJ_ARR:
+                                             *-|#     - status 'resolved|rejected'
+                                             *-|#     - value VAL2 (if resolved)
+                                             *-|#     - reason VAL2 (if rejected)
 
 
 async function [*] [FUNC](...) {...}          -|#Returns FUNC2(...)->PROMISE, where FUNC can:
@@ -1953,7 +1953,7 @@ import VAR[, ...] from "MDL"                 *-|#"default" VAR. Can be combined,
 import {} from "MDL"
 import "MDL"                                 *-|#Do not import the variable, just execute the file
 
-import("MDL")->PROMISE(OBJ)                *-||~#As opposed to above, not static (dynamic), i.e. does not have to be top-level
+import("MDL")->PROMISE(OBJ)                 *-||#As opposed to above, not static (dynamic), i.e. does not have to be top-level
 
 CIRCULAR DEPENDENCIES ==>                    *-|#Accessing circular properties during file loading throws an error.
                                              *-|#But accessing them later works.
