--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -594,6 +594,7 @@ Promise<T>                        #PROMISE either:
                                   #  - resolving T
                                   #     - if 'never', means cannot resolve
                                   #  - rejecting anything
+PromiseLike<T>                    #Same but for PROMISABLE
 [Readonly][Weak]Map
  <KEY_TYPE, VALUE_TYPE>           #
 [Readonly][Weak]Set<VALUE_TYPE>   #
@@ -606,6 +607,7 @@ Proxy                             #
 [Async]Generator<T, U, V>         #ITERABLE returned by (function*(){})
                                   #Doing T = yield V (def: any = yield unknown) and return V (def: unknown)
 
+ArrayLike<T>                      #ARRAYLIKE
 ArrayBuffer[View]|DataView        #
 Uint8ClampedArray                 #
 [U]Int8|16|32Array                #
