no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -445,6 +445,7 @@ multiline-comment-style [STR]     #How multiline comments should look like, with
                                   #                   ... */
                                   #  - 'separate-lines': //
                                   #                      //
+                                  #Does not apply to JSDoc comments
 line-comment-position [OBJ]       #Position of line comments
                                   #OBJ:
                                   #  - position 'above' (def) or 'beside' (i.e. end of line)
