no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -80,6 +80,7 @@ CONF.include|exclude              #Input FILEs but as 'GLOB'_ARR
 
 
 --watch|w                         #Watch mode
+                                  #On file change, only target changed file and files importing it
 CONF.compileOnSave                #Tells IDE to run tsc in watch mode.
 
 --preserveWatchOutput             #Do not clear screen between runs with --watch
