no commit message

--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -6,7 +6,6 @@
 
 
 See:
-  - https://github.com/microsoft/TypeScript/blob/master/doc/spec.md
   - reorganize this doc, adding chapters
   - JSDoc then https://www.typescriptlang.org/docs/handbook/type-checking-javascript-files.html
   - check VSCode options
@@ -573,7 +572,7 @@ export ...                        #Assign to NAMESPACE.VAR, i.e. allow using out
                                   #Same syntax as `declare ...`
                                   #Not same as ESM `export` keyword.
 
-import VAR2 = NAMESPACE.VAR       #Like const VAR2 = NAMESPACE.VAR except also works if NAMESPACE.VAR is a TYPE
+import VAR2 = NAMESPACE[.VARR]    #Like const VAR2 = NAMESPACE.VARR except also works if NAMESPACE.VARR is a TYPE
                                   #Not same as ESM `import` keyword.
 
 NAMESPACE MERGING ==>             #If NAMESPACE declared several times, merge exported VARs.
