--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1941,6 +1941,8 @@ you-dont-need-lodash-underscore/ ##Avoid Underscore|Lodash when there is a ES6 e
                                  ##  - _.isNil|isNull|isUndefined() -> ==|=== null|undefined
                                  ##  - _.split() -> STR.split()
                                  ##  - _.takeRight|drop() -> ARR.slice()
+                                 ##  - _.padStart|End() -> STR.padStart|End()
+                                 ##  - _.upperFirst() -> STR[0].toUpperCase()
                                  ##Not checked:
                                  ##  - _.chunk() -> ARR.reduce()
                                  ##  - _.sortBy|orderBy() -> ARR.sort()
@@ -1953,7 +1955,7 @@ you-dont-need-lodash-underscore/ ##Avoid Underscore|Lodash when there is a ES6 e
                                  ##  - _.isEmpty() -> Object.keys().length
                                  ##  - _.keyBy() -> ARR.reduce()
                                  ##  - _.inRange() -> < >
-                                 ##Node module "eslint-plugin-you-dont-need-lodash-underscore" (6.5.0)
+                                 ##Node module "eslint-plugin-you-dont-need-lodash-underscore" (6.6.0)
 
 
                                              /=+===============================+=\
