no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2405,7 +2405,7 @@ PROCESS|CHILDPROCESS.send                       #Communication:
                                                 #OPTS:
                                                 #  - keepOpen BOOL (def: false): see TCPSOCKET
 CHILDPROCESS.on("message",
-FUNC(OBJ[, TCPSOCKET|TCPSERVER]))               #CHILDPROCESS will not exit until disconnect() is called or parent exits.
+FUNC(VAL[, TCPSOCKET|TCPSERVER]))               #CHILDPROCESS will not exit until disconnect() is called or parent exits.
 CHILDPROCESS.disconnect()                       #Flush all communication, then becomes impossible to do send()
                                                 #Do it before exiting.
 CHILDPROCESS.connected                          #
