no commit message

--- a/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
+++ b/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
@@ -604,7 +604,23 @@ proposal-function-bind            #OBJ::FUNC
 
 FLOW ==>                          #See flow doc
 
-TYPESCRIPT ==>                    #See TypeScript doc
+TYPESCRIPT ==>                    #
+syntax-typescript                 #PLUGIN_OPTS:
+                                  #  - isTSX BOOL (def: if *.tsx)
+transform-typescript              #Transpile TypeScript:
+                                  #  - strip TYPEs
+                                  #  - non-const ENUM
+                                  #  - CLASS-specific features
+                                  #But no:
+                                  #  - type checking (use tsc for this)
+                                  #  - export = VAL nor import VAL = require()
+                                  #  (implies --isolatedModules, so:)
+                                  #  - const ENUM
+                                  #  - NAMESPACE
+                                  #  - re-exporting a TYPE
+                                  #  - without --importHelpers, inline helpers in each file instead of shared
+                                  #PLUGIN_OPTS:
+                                  #  - isTSX BOOL (def: if *.tsx)
 
 JSX ==>                           #See JSX doc
 
