--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -209,6 +209,9 @@ LANGUAGE SERVICE PLUGINS ==>      #Programmatic API for changing behavior of Typ
 PROGRAMMATIC USAGE ==>            #Not documented yet (do it when I need to).
                                   #Should then check TypeScript GitHub wiki: Using-the-Compiler-API, FAQs-for-API-Consumers API-Breaking-Changes
 
+BABEL ==>                         #Transpile (strip TYPEs only) but no type checking
+                                  #See Babel doc
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
