--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -11,7 +11,7 @@ VERSION ==>                                     #Standard is called ECMAScript. 
 SUPPORT ==>                                     #Use this notation for new features:
                                                ~#  - stage 3 proposal
                                             NUM*#  - introduced by Node NUM.*.* (starting at Node 7)
-                                               *#  - not Node 12.1.0
+                                               *#  - not Node 12.5.0
                                                -#  - not all supported web browsers
                                                |#  - a core Babel plugin exists (only documented if lacks Node/browser support)
                                               ||#  - a non-core Babel plugin exists
@@ -263,9 +263,9 @@ NUM                                             #Always double-precision float
                                                 #  - 0xNUM 0XNUM
                                               -|#  - 0oNUM 0ONUM
                                               -|#  - 0bNUM 0BNUM
-                                            *-|~#Underscores can be added anymore:
-                                            *-|~#  - they are ignored and meant as separators
-                                            *-|~#  - works with any radix except octals
+                                          12*-|~#Underscores can be added:
+                                          12*-|~#  - they are ignored and meant as separators
+                                          12*-|~#  - works with any radix except octals
                                                 #Keywords (see below):
                                                 #  - NaN: possible illegal NUM operations
                                                 #  - [-]Infinity: very low|high NUM
