no commit message

--- a/Languages/Metaprogramming/Parsing/Traversing/JavaScript/acorn-walk.node.txt
+++ b/Languages/Metaprogramming/Parsing/Traversing/JavaScript/acorn-walk.node.txt
@@ -5,6 +5,9 @@
 
 
 
+ALTERNATIVES ==>                  #  - acorn-walk (preferred with acorn)
+                                  #  - eslint-visitor-keys (preferred with espree)
+
 VERSION ==>                       #See Acorn
 
 AST FORMAT ==>                    #ESTree
