--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
@@ -15,17 +15,18 @@ ALTERNATIVES ==>                  #  - esprima:
                                   #     - most utilities functions, good plugin system
                                   #     - no support for recent ES features
                                   #     - loose parsing
-                                  #  - @babel/parser:
-                                  #     - fork of acorn, used by Babel
+                                  #  - espree (preferred with ESLint plugins):
+                                  #     - used by ESLint
+                                  #     - built on top of acorn but:
+                                  #        - different OPTS
+                                  #        - produces Esprima-compatible output for comments, locations and TOKENs
+                                  #  - @babel/parser (preferred with Babel plugins):
+                                  #     - used by Babel
+                                  #     - fork of acorn
                                   #     - uses slightly different ESTree
                                   #     - supports Flow, TypeScript, ES proposals
                                   #     - least utilities functions
                                   #     - most active
-                                  #  - espree:
-                                  #     - based on acorn (but produces Esprima format), used by ESLint
-                                  #     - uses ESTree
-                                  #     - most convenient
-                                  #     - uses non-standard additions, where acorn has now implemented those features.
                                   #  - typescript-estree:
                                   #     - uses TSESTree, used by typescript-eslint (former tslint)
                                   #     - supports TypeScript
