--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/espree.javascript.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/espree.javascript.txt
@@ -9,7 +9,9 @@ ALTERNATIVES ==>                  #See acorn
                                   #Still documented since it used by ESLint
 
 VERSION ==>                       #6.0.0
-                                  #Only goal is to use acorn, but produce Esprima-compatible output.
+                                  #Built on top of acorn but:
+                                  #  - different OPTS
+                                  #  - produces Esprima-compatible output for comments, locations and TOKENs
 
 
                                              /=+===============================+=\
@@ -28,7 +30,6 @@ ESPREE.parse('JS'[, OPTS])        #Like ACORN.parse('JS'), but with different OP
                                   #     - set TOP_NODE.comments COMMENT_ARR
                                   #     - COMMENT is in Esprima format: type 'Line|Block', value STR, start|end|range|loc
                                   #  - tokens BOOL (def: false): set TOP_NODE.tokens TOKEN_ARR
-                                  #  - tolerant BOOL (def: false): set TOKEN_ARR.errors
                                   #  - ecmaFeatures:
                                   #     - impliedStrict BOOL (def: false): imply 'use strict'
                                   #     - globalReturn BOOL (def: false): use ACORN OPTS.allowReturnOutsideFunction
@@ -48,4 +49,4 @@ ESPREE.tokenize('JS'[, OPTS])     #Like [...ACORN.tokenizer('JS')], but:
                                   #       Identifier, Keyword, Punctuator, JSXText, JSXIdentifier, EOF
                                   #     - value STR
                                   #     - start|end|range|loc
-                                  #  - different OPTS: ecmaVersion, range, loc, comment, tolerant, ecmaFeatures (see above)
+                                  #  - same OPTS as above except tokens
