no commit message

--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -283,21 +283,21 @@ object                            #OBJ
                                   #  - can be , ; or newline
                                   #  - can use trailing delimiters
                                   #No missing properties unless '?'
-                                  #No additional properties:
-                                  #  - with OBJ.VAR or { VAR }, not OBJ[NUM|STR] or { [NUM|STR] }
-                                  #  - unless either:
-                                  #     - empty OBJ_TYPE {}
-                                  #     - using an OBJ VAR (instead of an OBJ literal)
-                                  #        - only if not all properties are additional
-                                  #        - should not rely on this exception
+                                  #No additional properties unless either:
+                                  #  - empty OBJ_TYPE {}
+                                  #  - there is a { [VAR: TYPE2]: TYPE }
+                                  #  - "implicity any index": there is no { [VAR: TYPE2]: TYPE } but using:
+                                  #     - post-declaration assignment
+                                  #     - with OBJ[NUM|STR] (not OBJ.VAR)
+                                  #  - assigning an OBJ VAR (instead of an OBJ literal)
+                                  #     - only if not all properties are additional
 --suppressExcessPropertyErrors    #Allow additional properties
-{ [VAR: TYPE2]: TYPE, ... }       #TYPE of OBJ[NUM|STR] (not OBJ.VAR)
-                                  #Applies to all properties, additional or not.
+--suppressImplicitAnyIndexErrors  #Do not make --noImplicitAny fail when using "implicit any index"
+{ [VAR: TYPE2]: TYPE, ... }       #TYPE of any OBJ[NUM|STR]
+                                  #Also applies to any OBJ.VAR
                                   #TYPE2 is the key type, either:
                                   #  - NUM
                                   #  - STR: works for OBJ[NUM] too
-                                  #Defaults to untyped (any)
---suppressImplicitAnyIndexErrors  #Do not make --noImplicitAny fail when OBJ[NUM|STR] use default untyped (any).
 
 Pick<OBJ_TYPE, KUTYPE>            #Only keep KUTYPE properties
 Omit<OBJ_TYPE, KUTYPE>            #Inverse
@@ -606,19 +606,6 @@ FILE EXTENSIONS ==>               #import 'PATH' must not include .EXT
                                   #import 'PATH|MODULE' tries several times using (in order) .ts[x], .d.ts, (if --allowJs) .js[x]
                                   #  - including PACKAGE.main, i.e. 'FILE.js' will search for 'FILE.ts[x]|d.ts'
 
-*.JS TYPING ==>                   #*.js can be imported but are untyped (any) by default.
---allowJs                         #Use type inference of *.js exported values
---checkJs                         #Also do type checking inside *.js
-// @ts-ignore                     #Ignore --checkJs on next line
-// @ts-nocheck                    #Ignore --checkJs on whole file (blacklisting, default)
-// @ts-check                      #Only use --checkJs for files with this comment (whitelisting)
---maxNodeModuleJsDepth NUM        #Run --allowJs (if enabled) on imported 'MODULE' (instead of only 'PATH') providing:
-                                  #  - they are NUM levels deep in dependencies tree
-                                  #  - no *.ts[x]|d.ts can be found
-                                  #Also run --checkJs (if enabled), but not recommended, as most *.js 'MODULE' will report errors.
-                                  #Def: 0 (disabled)
-JSDOC COMMENTS ==>                #Can be used for typecasting in *.js
-
 --module STR                      #Module system for output:
                                   #  - esnext: ES modules
                                   #  - es2015|es6: same but without import() and import.meta
@@ -749,6 +736,19 @@ tslib                            ##Similar to core-js but fewer features:
                                   #  - re-exporting a TYPE
                                   #  - without --importHelpers, inline helpers in each file instead of shared
                                   #Must be enabled when using Babel TypeScript plugins
+
+// @ts-ignore                     #Ignore type checking on next line. Works in *.js too (if --checkJs)
+
+*.JS TYPING ==>                   #*.js can be imported but are untyped (any) by default.
+--allowJs                         #Use type inference of *.js exported values
+--checkJs                         #Also do type checking inside *.js
+// @ts-[no]check                  #Use|ignore --checkJs on current file
+--maxNodeModuleJsDepth NUM        #Run --allowJs (if enabled) on imported 'MODULE' (instead of only 'PATH') providing:
+                                  #  - they are NUM levels deep in dependencies tree
+                                  #  - no *.ts[x]|d.ts can be found
+                                  #Also run --checkJs (if enabled), but not recommended, as most *.js 'MODULE' will report errors.
+                                  #Def: 0 (disabled)
+JSDOC COMMENTS ==>                #Can be used for typecasting in *.js
 
 --experimentalDecorators          #Allow @DECORATOR (ES stage 2 proposal)
 --emitDecoratorMetadata           #Allow Reflect.metadata (ES stage 0 proposal)
