no commit message

--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -8,6 +8,16 @@
 See:
   - https://github.com/Microsoft/TypeScript/wiki
      - including tsserver
+  - tsserver: https://github.com/microsoft/TypeScript/wiki/Standalone-Server-(tsserver)
+  - programmatic:
+     - https://github.com/microsoft/TypeScript/wiki/Using-the-Compiler-API
+     - https://github.com/microsoft/TypeScript/wiki/FAQs-for-API-Consumers
+     - https://github.com/microsoft/TypeScript/wiki/API-Breaking-Changes
+  - language services:
+     - https://github.com/microsoft/TypeScript/wiki/Writing-a-Language-Service-Plugin
+     - https://github.com/microsoft/TypeScript/wiki/Using-the-Language-Service-API
+     - https://github.com/microsoft/TypeScript/wiki/JavaScript-Language-Service-in-Visual-Studio
+     - https://github.com/microsoft/TypeScript/wiki/Debugging-Language-Service-in-VS-Code
   - updates:
      - https://github.com/Microsoft/TypeScript/wiki/What's-new-in-TypeScript
      - https://github.com/microsoft/TypeScript/wiki/Breaking-Changes
@@ -134,7 +144,7 @@ CONF.references                   #Sub-CONFs:
                                   #  - time used for program|transform|comment|print
 --disableSizeLimit                #Do not crash when total non-*.ts[x] files size >= 20MB
 
-STRUCTURAL TYPING ==>             #Not nominative, i.e. TYPE is the structure not the name.
+STRUCTURAL TYPING ==>             #Not nominative, i.e. TYPE is the structure not the name (including for CLASS|INTERFACE).
                                   #Exception: CLASS private|protected fields.
 
 TYPE                              #Among the ones below
@@ -264,11 +274,11 @@ object                            #OBJ
                                   #  - even undefined|null, i.e. {VAR: undefined} works but not {}
                                   #No additional properties:
                                   #  - with OBJ.VAR or { VAR }, not OBJ[NUM|STR] or { [NUM|STR] }
-                                  #  - unless:
-                                  #     - both:
-                                  #        - using an OBJ VAR (instead of an OBJ literal)
-                                  #        - not all properties are additional
-                                  #     - should not rely on this exception
+                                  #  - unless either:
+                                  #     - empty OBJ_TYPE {}
+                                  #     - using an OBJ VAR (instead of an OBJ literal)
+                                  #        - only if not all properties are additional
+                                  #        - should not rely on this exception
 --suppressExcessPropertyErrors    #Allow additional properties
 { [VAR: TYPE2]: TYPE, ... }       #TYPE of OBJ[NUM|STR] (not OBJ.VAR)
                                   #Applies to all properties, additional or not.
@@ -360,6 +370,10 @@ this                              #Can be:
                                   #  - TYPE2 (return value)
 --noImplicitThis                  #Error when using `this` with type ANY.
                                   #I.e. caller did FUNC() instead of OBJ.FUNC() or FUNC.call|bind(OBJ)
+ThisType<TYPE>                    #OBJ_TYPE where all OBJ.FUNC() use TYPE as `this`
+                                  #Usually used as intersection.
+                                  #Only works when --noImplicitThis is used
+                                  #Not needed for CLASSes (which guess `this`) or single FUNC (which can use `this` parameter)
 
 Parameters<FUNC_TYPE>             #Parameters [TYPE,...] (tuple)
 ReturnType<FUNC_TYPE>             #Return value TYPE2
